# iio-hyprland

./: .gitignore  LICENSE  README.org
c/: CMakeLists.txt  install.sh  run.sh
c/src/: main.c
